[workspace]
members = ["rusty-sdfs-lib", "noise-showcase", "scene-waves"]
resolver = "2"

[workspace.package]
authors = ["Ane Johanson"]
description = "Rendering SDFs using Rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
assert_approx_eq = "1.1"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.10"
tiny-skia = "0.11"
wyhash = "0.5"
