[workspace]
members = [
    "rusty-sdfs-lib",
    "heightmap-streamlines",
    "noise-showcase",
    "obegraensad-animation", 
    "ppc-hatching",
    "scene-streamlines",
    "water-animation",
]
resolver = "2"

[workspace.package]
authors = ["Ane Johanson"]
description = "Rendering SDFs using Rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
assert_approx_eq = "1.1"
bincode = "1.3"
minifb = "0.25"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
tiny-skia = "0.11"
wyhash = "0.5"
