[package]
name = "obegraensad-animation"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-sdfs-lib = { path = "../rusty-sdfs-lib" }
minifb = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
