[package]
name = "rusty-sdfs-lib"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
tiny-skia = { workspace = true }
