[package]
name = "scene-streamlines"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = { workspace = true }
rusty-sdfs-lib = { path = "../rusty-sdfs-lib" }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
